This is my first change.

--- a/website.html
+++ b/website.html
@@ -10,7 +10,7 @@
     <header>
         This is the Foundation of our Website
     </header>
-    <p></p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur dolore, quidem ipsa minima nesciunt officia minus praesentium itaque facere deleniti, ad velit beatae? Quam dolore placeat commodi hic praesentium provident!</p>
 
     <script src="website ctrl.js"></script>
 </body>
