This is the third change. (Organized base format)

--- a/website.html
+++ b/website.html
@@ -4,16 +4,22 @@
     
 <head>
     <link rel="stylesheet" href="webstyle.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio Website</title>
 </head>
 <body>
     <div class="container">
-            <h1>Our Personal Portfolio</h1>
+            <h1 style="text-align: center;"><u>Our Personal Portfolio</u></h1>
+    </div>
+    <div class="container2">
+        <h2 style="font-size: 25px;">Members: Edrian G. Huelva & Ethan Clyde Montas</h2>
     </div>
     <header>
-        <h2>This is the Foundation of our Website.</h2>
+        <h1 style="text-align: center; padding:5px;">This is the Foundation of our Website.(Placeholder)</h1>
     </header>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur dolore, quidem ipsa minima nesciunt officia minus praesentium itaque facere deleniti, ad velit beatae? Quam dolore placeat commodi hic praesentium provident!</p>
+    <div class="container3">
+        <h2 style="padding:10px; font-size: 30px;">About Members:</h2>
+    </div>
 
     <script src="website ctrl.js"></script>
 </body>
