feat: update about us description

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <section id="members" class="section alt-bg">
             <div class="container">
                 <h2 class="section-title" id="about-title">About Us</h2>
-                <p class="section-desc" id="about-desc">We are IT students from BSIT-1B.</p>
+                <p class="section-desc" id="about-desc">We are IT students from Bicol University.</p>
                 <h2 class="section-title mt-large" id="members-title">Members</h2>
                 <div id="members-container" class="members-grid">
                     <a href="mailto:edriangomez.huelva25@bicol-u.edu.ph" target="_blank" class="member-card">
